# theknora

./: .gitignore  AVENIR_NEXT_UPDATE.txt  CLEANUP_VERIFICATION_REPORT.md  IMPROVEMENTS_COMPLETED.md  LANDING_PAGE_FACTCHECK.txt  LANDING_PAGE_SUMMARY.txt  cloudbuild.yaml  docker-compose.yml  fly.toml  railway.json  render.yaml  run.bat  run.sh  start.sh
backend/: .env.example  Cargo.toml  Dockerfile
backend/data/uploads/: upload_Smart-Home-Automation-using-Iot(1).pptx
backend/src/: config.rs  main.rs  models.rs
backend/src/handlers/: document.rs  health.rs  llm.rs  mod.rs  search.rs
backend/src/handlers/upload/: mod.rs
backend/src/services/: cache_manager.rs  document_processor.rs  llm_handler.rs  mod.rs  vector_store.rs
design-system/: COLORS.md  COMPONENTS.md  README.md  SPACING_LAYOUT.md  TYPOGRAPHY.md  design-tokens.css  tailwind-config-reference.js
frontend/: CHECKLIST.md  Dockerfile  FRONTEND_DEEP_ANALYSIS.md  FRONTEND_IMPROVEMENTS.md  IMPROVEMENTS_QUICK_REF.md  README_IMPROVEMENTS.md  SUMMARY.md  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/components/: DocumentIngestionTab.tsx  IntelligentQueryTab.tsx  KnowledgeAnalyticsTab.tsx  Navigation.tsx
frontend/components/FileUpload/: index.tsx
frontend/lib/: api.ts  store.ts
