[package]
name = "knora-backend"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "knora-backend"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
actix-multipart = "0.4"
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
futures = "0.3"

# Vector operations
ndarray = "0.15"

# File handling
csv = "1.3"
tempfile = "3.8"
zip = "0.6"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Document parsing
calamine = "0.22"

# PDF extraction
pdf-extract = "0.7"
pdfium-render = { version = "0.8", features = ["thread_safe"] }

[profile.release]
opt-level = 3
lto = true
